tests/dataset/tpc-ds/compiler/pl/q15.error
run: exit status 2
ERROR: /tmp/q15.pl:64: user:main '<meta-call>'/1: Unknown procedure: substr/4
